# minigolf

./: .gitignore  BUILD_WIN32.txt  CMakeLists.txt  README.txt  course2.golf  hole.00.db  hole.03.db  hole.04.golf  minigolf.tmproj  object.golf  test_hole.00.db  test_hole.01.db  test_hole.02.db
CMakeModules/: FindGLUI.cmake
lib/glui/windows/: glui.h
src/: CMakeLists.txt  about.cpp  about.h  ballcuptee.cpp  ballcuptee.h  cuptee.c  cuptee.h  data.c  data.cpp  data.h  highscores.cpp  highscores.h  hostgame.cpp  hostgame.h  linkedlist.c  linkedlist.cpp  linkedlist.h  main.c  main.cpp  networkgame.cpp  networkgame.h  object.cpp  object.h  objects.c  objects.cpp  objects.h  physics.c  physics.cpp  physics.h  player.h  scorecard.cpp  scorecard.h
test/: CMakeLists.txt  testfileparsing.c  testfileparsing.cpp  testfileparsing.h  testlinkedlist.c  testlinkedlist.cpp  testlinkedlist.h  testmain.c  testmain.cpp  testphysics.cpp  testphysics.h
vs2010/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Minigolf.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
vs2010/Debug/: Minigolf.ilk  MinigolfTest.ilk
vs2010/Win32/Debug/ZERO_CHECK/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
vs2010/src/: Minigolf.vcxproj  Minigolf.vcxproj.filters
vs2010/src/Minigolf.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Minigolf_manifest.rc  ResolveAssemblyReference.cache  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
vs2010/test/: MinigolfTest.vcxproj  MinigolfTest.vcxproj.filters
vs2010/test/MinigolfTest.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  MinigolfTest.lastbuildstate  MinigolfTest_manifest.rc  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
